# oxischeme

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  main  save-docs.sh  search-index.js
oxischeme/: fn.main.html  fn.repl.html  index.html  stability.html  stability.json
oxischeme/environment/: index.html  struct.Activation.html  struct.Environment.html  type.ActivationPtr.html  type.EnvironmentPtr.html  type.RootedActivationPtr.html  type.RootedEnvironmentPtr.html
oxischeme/eval/: enum.Trampoline.html  fn.analyze.html  fn.apply_invocation.html  fn.evaluate.html  fn.evaluate_file.html  fn.evaluate_in_global_env.html  index.html  struct.Meaning.html  (+2 more)
src/: context.rs  environment.rs  eval.rs  heap.rs  main.rs  primitives.rs  print.rs  read.rs  value.rs
tests/: README.md  bench_allocate_cons_cells.scm  bench_eval_metacircular.scm  bench_iterate_empty_loops.scm  rooting-bug.scm  test_eval_begin.scm  test_eval_closures.scm  test_eval_if_consequent.scm  test_eval_local_definitions.scm  test_heap_allocate_tons.scm  test_primitives_arithmetic.scm  test_primitives_atom.scm  test_primitives_eq.scm  test_primitives_error.scm  test_primitives_length.scm  test_primitives_list.scm  test_primitives_lt.scm  test_primitives_not.scm  test_primitives_null.scm  test_primitives_number_equal.scm  test_primitives_number_question.scm  test_primitives_pair.scm  test_primitives_set_car.scm  test_primitives_set_cdr.scm  test_primitives_string_question.scm  test_primitives_symbol_question.scm  test_print_cycle.scm  test_ref_defined_later.scm  test_set_defined_later.scm
(+68 files in other folders)
