[package]

name = "oxischeme"
version = "0.0.3"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "A Scheme implementation, in rust."
license = "Apache-2.0"

repository="https://github.com/fitzgen/oxischeme"
documentation="https://fitzgen.github.io/oxischeme/oxischeme/index.html"

readme="README.md"

keywords=["scheme", "language", "gc"]

[dependencies]
bit-vec = "0.4.0"